- sbb components - icons - navigation bar

--- a/package.json
+++ b/package.json
@@ -23,6 +23,9 @@
     "@angular/router": "~7.2.0",
     "@google-cloud/speech": "^2.3.1",
     "@google-cloud/text-to-speech": "^1.0.0",
+    "@sbb-esta/angular-icons": "^7.0.0",
+    "@sbb-esta/angular-public": "^7.0.0",
+    "esta-webjs-extensions": "^7.0.0",
     "core-js": "^2.5.4",
     "package.json": "^2.0.1",
     "rxjs": "~6.3.3",
