--- a/package.json
+++ b/package.json
@@ -23,10 +23,12 @@
     "@angular/router": "~7.2.0",
     "@google-cloud/speech": "^2.3.1",
     "@google-cloud/text-to-speech": "^1.0.0",
+    "@ngx-translate/core": "^11.0.1",
+    "@ngx-translate/http-loader": "^4.0.0",
     "@sbb-esta/angular-icons": "^7.0.0",
     "@sbb-esta/angular-public": "^7.0.0",
-    "esta-webjs-extensions": "^7.0.0",
     "core-js": "^2.5.4",
+    "esta-webjs-extensions": "^7.0.0",
     "package.json": "^2.0.1",
     "rxjs": "~6.3.3",
     "tslib": "^1.9.0",
