--- a/angular.json
+++ b/angular.json
@@ -27,7 +27,9 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.scss"
+              "./node_modules/font-awesome/scss/font-awesome.scss",
+              "src/styles.scss",
+              "./node_modules/@sbb-esta/angular-public/typography.css"
             ],
             "scripts": [],
             "es5BrowserSupport": true
