--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@sbb-esta/angular-public": "^7.0.0",
     "core-js": "^2.5.4",
     "esta-webjs-extensions": "^7.0.0",
+    "font-awesome": "^4.7.0",
     "package.json": "^2.0.1",
     "rxjs": "~6.3.3",
     "tslib": "^1.9.0",
